horizontal scrollbar on mobile fixed

--- a/css/index.css
+++ b/css/index.css
@@ -204,7 +204,7 @@ img {
 }
 @media (max-width:500px) {
   .nav-bar .nav-links {
-    width: 25%;
+    width: 45%;
     justify-content: flex-end;
   }
 }
@@ -225,14 +225,6 @@ img {
 @media (max-width:800px) {
   .nav-bar .nav-links {
     justify-content: space-around;
-  }
-}
-.nav-bar .nav-links .mobile-hamburger {
-  text-decoration: none;
-}
-@media (max-width:500px) {
-  .nav-bar .nav-links .mobile-hamburger {
-    display: none;
   }
 }
 .nav-bar .nav-links button {
@@ -296,16 +288,20 @@ img {
 @media (max-width:500px) {
   .header-container .header-content {
     height: 400px;
-    width: 100%;
+    width: 90%;
     align-content: center;
     justify-content: center;
     align-items: center;
-    margin-top: 0px;
-    padding-right: 15px;
+    margin: 0 auto;
   }
 }
 .header-container .header-content h2 {
   font-size: 2.2rem;
+}
+@media (max-width:500px) {
+  .header-container .header-content h2 {
+    font-size: 2.6rem;
+  }
 }
 .header-container .header-content p {
   font-size: 2.2rem;
@@ -341,7 +337,7 @@ img {
 }
 @media (max-width:500px) {
   .header-container .header-content button {
-    margin-top: 0px;
+    margin-top: -50px;
   }
 }
 .header-container .header-img {
@@ -360,6 +356,7 @@ img {
     margin-top: 0px;
     width: 90%;
     margin-left: 25px;
+    padding-right: 0;
   }
 }
 .header-container .header-img img {
@@ -375,8 +372,9 @@ img {
 }
 @media (max-width:500px) {
   .features {
-    height: 1000px;
-    justify-content: space-evenly;
+    height: 900px;
+    justify-content: space-around;
+    margin: 0 auto;
   }
 }
 .features .features-heading {
@@ -390,11 +388,8 @@ img {
   .features .features-heading {
     width: 95%;
     height: 220px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    align-content: flex-start;
-    justify-content: space-around;
+    margin: 0 auto;
+    margin-top: 20px;
   }
 }
 .features .features-heading h2 {
@@ -402,7 +397,7 @@ img {
 }
 .features .features-heading p {
   font-size: 1.4rem;
-  margin-top: 15px;
+  margin-top: 30px;
 }
 .features .box-features {
   width: 100%;
@@ -425,7 +420,8 @@ img {
     flex-direction: column;
     align-items: center;
     align-content: flex-start;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    margin: 0 auto;
     transform: translate(0%, 0%);
   }
 }
@@ -467,6 +463,11 @@ img {
   height: 500px;
   margin: 0 auto;
   padding-bottom: 20px;
+}
+@media (max-width:500px) {
+  .carousel {
+    display: none;
+  }
 }
 .carousel .is-hidden {
   display: none;
@@ -554,6 +555,8 @@ img {
     align-items: center;
     align-content: flex-start;
     justify-content: space-around;
+    padding: 0;
+    margin: 0 auto;
   }
 }
 .about .about-content {
@@ -571,7 +574,9 @@ img {
 }
 @media (max-width:500px) {
   .about .about-content {
-    width: 95%;
+    width: 85%;
+    margin: 0 auto;
+    padding-right: 0;
   }
 }
 .about .about-content h2 {
@@ -600,6 +605,12 @@ img {
     width: 60%;
   }
 }
+@media (max-width:500px) {
+  .about .about-content button {
+    width: 150px;
+    margin: 0 auto;
+  }
+}
 .about .about-img {
   width: 45%;
   height: auto;
@@ -615,6 +626,7 @@ img {
 @media (max-width:500px) {
   .about .about-img {
     display: none;
+    padding: 0;
   }
 }
 .about .about-img img {
@@ -688,12 +700,11 @@ img {
 @media (max-width:500px) {
   .team-container .team-content {
     height: 500px;
-    transform: translate(0%, 0%);
   }
 }
 .team-container .team-content ul {
   height: 400px;
-  width: 100%;
+  width: 85%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -702,7 +713,7 @@ img {
 @media (max-width:500px) {
   .team-container .team-content ul {
     height: 500px;
-    transform: translate(0%, 0%);
+    margin: 0 auto;
   }
 }
 .team-container .team-content ul li {
@@ -771,6 +782,8 @@ img {
   .subscribe-container form input {
     width: 225px;
     height: 20px;
+    padding-left: 0;
+    margin-left: 0;
   }
 }
 .subscribe-container form input::placeholder {
@@ -840,6 +853,7 @@ img {
 }
 @media (max-width:500px) {
   .contact-container .contact-form {
+    width: 90%;
     height: 500px;
   }
 }
